<resources>
    <string name="app_name">LiveProject</string>
    <string name="logo_description" />
    <string name="done">Done</string>
    <string name="already_have_account">Already have account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forget_password">Forget password ?</string>

    <string name="home">Home</string>
    <string name="products">Products</string>
    <string name="account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_icon">Search Icon</string>
    <string name="search">Search</string>
    <string name="search_here">Search here</string>
    <string name="image_view_description">imageViewDesc</string>
    <string name="all_categories">All Category</string>

</resources>