<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusableInTouchMode="true">

    <!-- Background Image -->
    <ImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/signup_background" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="380dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <EditText
                android:id="@+id/EmailEt"
                android:layout_width="match_parent"
                android:layout_height="52.37dp"
                android:layout_marginHorizontal="27dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/HintColor"
                android:textSize="13.83sp" />

            <EditText
                android:id="@+id/PasswordEt"
                android:layout_width="match_parent"
                android:layout_height="52.37dp"
                android:layout_marginHorizontal="27dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_edittext"
                android:drawableEnd="@drawable/eye_slash"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/HintColor"
                android:textSize="13.83sp" />

            <EditText
                android:id="@+id/ConfirmPasswordEt"
                android:layout_width="match_parent"
                android:layout_height="52.37dp"
                android:layout_marginHorizontal="27dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_edittext"
                android:drawableEnd="@drawable/eye_slash"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/HintColor"
                android:textSize="13.83sp" />

            <Button
                android:id="@+id/signUpButton"
                android:layout_width="158dp"
                android:layout_height="44dp"
                android:layout_marginTop="35dp"
                android:background="@drawable/rounded_button"
                android:text="@string/done"
                android:textColor="@color/SplashGreen"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/alreadyHaveAccountLayout"
                android:layout_width="156dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="25dp"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/toLoginPage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:padding="8dp"
                    android:text="@string/already_have_account"
                    android:textColor="@color/blue"
                    android:textSize="12sp"
                    android:textStyle="italic" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>

